--- a/src/app/main/home/home.component.html
+++ b/src/app/main/home/home.component.html
@@ -1,8 +1,8 @@
 <div class="container navigation">
   <div class="row justify-content-center">
-    <button class="btn col-2" [routerLink]="['/home', {outlets: {'info': ['define']}}]">DEFINE KINESIOLOGY?</button>
-    <button class="btn col-2" [routerLink]="['/home', {outlets: {'info': ['benefits']}}]">BENEFITS OF KINESIOLOGY</button>
-    <button class="btn col-2" [routerLink]="['/home', {outlets: {'info': ['types']}}]">TYPES OF SESSIONS</button>
+    <button class="btn col-2" [routerLink]="['/home', {outlets: {'info': ['define']}}]">DEFINITION</button>
+    <button class="btn col-2" [routerLink]="['/home', {outlets: {'info': ['benefits']}}]">BENEFITS</button>
+    <button class="btn col-2" [routerLink]="['/home', {outlets: {'info': ['types']}}]">THERAPIES</button>
   </div>
 </div>
 <!-- <div [@routerTransition]="getState(o)"> -->
