--- a/src/app/main/kinisiologists/babsie/babsie.component.html
+++ b/src/app/main/kinisiologists/babsie/babsie.component.html
@@ -32,7 +32,7 @@
       </h4>
     </div>
     <div class="capable col-6">
-      <h1 style="text-align: center">WHAT I AM CAPABLE OF</h1>
+      <h1 style="text-align: center">THERAPY SESSIONS</h1>
       <ul>
         <li>KINESIOLOGY</li>
         <li>KAHUNA MASSAGE</li>
