--- a/src/app/main/kinisiologists/melina/melina.component.html
+++ b/src/app/main/kinisiologists/melina/melina.component.html
@@ -31,12 +31,15 @@
       </h4>
       <h4>Location:
         <a href="https://www.google.co.za/maps/place/616A+Magnetiet+St,+Elarduspark,+Pretoria,+0047/data=!4m2!3m1!1s0x1e95671aa71a591b:0x4c1440f1a77b0e5c?sa=X&ved=0ahUKEwjootKT0c3YAhXiDsAKHblbAHkQ8gEIKDAA" target="_blank">
-        <h5>616A Magnetiet Street Elardus Park Pretoria</h5>
+        <h5>616A Magnetiet Street Elardus Park Pretoria</h5><h6>Mondays</h6>
+        </a>
+        <a href="https://www.google.co.za/maps/place/264+9th+Rd,+Bredell+AH,+Kempton+Park,+1619/data=!4m2!3m1!1s0x1e953fcdd59b9197:0x2992ca66451ef744?sa=X&ved=0ahUKEwjn2LzS0M3YAhXjAsAKHYigDasQ8gEIKDAA" target="_blank">
+          <h5>264 9th Road Breddel AH</h5><h6>Wednesdays</h6>
         </a>
       </h4>
     </div>
     <div class="prices col-6">
-      <h1 style="text-align: center">WHAT I AM CAPABLE OF</h1>
+      <h1 style="text-align: center">THERAPY SESSIONS</h1>
     </div>
   </div>
 </div>
