--- a/src/app/main/kinisiologists/kinisiologists.component.html
+++ b/src/app/main/kinisiologists/kinisiologists.component.html
@@ -1,14 +1,17 @@
 <div class="container">
-  <h1>KINESIOLOGISTS TO CHOOSE FROM</h1>
+  <h1>KINESIOLOGY THERAPISTS</h1>
   <div class="row justify-content-center">
-    <div class="card">
+    <div class="card col-4">
       <button type="button" class="btn" [routerLink]="['/babsiePage']">
         <img src="./../../assets/babsie.jpg">
         <h2><b>Babsie Nothnagel</b></h2>
         <p>Benoni AH</p>        
       </button>
     </div>
-    <div class="card" id="milena" [routerLink]="['/melinaPage']">
+    <div class="info col-2">
+      <p>information about us</p>
+    </div>
+    <div class="card col-4" id="milena" [routerLink]="['/melinaPage']">
       <button type="button" class="btn">
         <img src="./../../assets/milena2.jpg">
         <h2><b>Melina Geertsema</b></h2>
