--- a/src/app/main/prices/prices.component.html
+++ b/src/app/main/prices/prices.component.html
@@ -5,40 +5,13 @@
   <h5>PLEASE FOLLOW THESE TABLES IN ORDER TO GET THE CORRECT PRICE ACCORDING TO YOUR SESSION</h5>
   <br>
   <div class="row">
-    <div class="col-2">
-      <table class="table table-bordered">
-        <tr>
-          <td>TIME (min)</td>
-          <td>COST</td>
-        </tr>
-        <tr>
-          <td>15</td>
-          <td>R180</td>
-        </tr>
-        <tr>
-          <td>30</td>
-          <td>R250</td>
-        </tr>
-        <tr>
-          <td>45</td>
-          <td>R400</td>
-        </tr>
-        <tr>
-          <td>60</td>
-          <td>R520</td>
-        </tr>
-        <tr>
-          <td>90</td>
-          <td>R650</td>
-        </tr>
-      </table>
-    </div>
     <div class="col-10">
       <table class="table table-bordered">
         <tr>
-          <th>Session Type</th>
-          <th># of sessions</th>
-          <th>Time</th>
+          <th>Therapy</th>
+          <th>Session</th>
+          <th>Duration</th>
+          <th>Cost</th>
         </tr>
         <tr>
           <td class="sessionType" class="sessionType" rowspan="2">Kinesiology</td>
