updated prices and added search

--- a/src/app/main/kinisiologists/kinisiologists.component.html
+++ b/src/app/main/kinisiologists/kinisiologists.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <h1>KINESIOLOGY THERAPISTS</h1>
+  <h1>THERAPISTS</h1>
   <div class="row justify-content-center">
     <div class="card col-4">
       <button type="button" class="btn" [routerLink]="['/babsiePage']">
@@ -9,7 +9,7 @@
       </button>
     </div>
     <div class="info col-2">
-      <p>information about us</p>
+      <!-- //>information about us</p> -->
     </div>
     <div class="card col-4" id="milena" [routerLink]="['/melinaPage']">
       <button type="button" class="btn">
