changed & added abilities

--- a/src/app/main/kinisiologists/babsie/babsie.component.html
+++ b/src/app/main/kinisiologists/babsie/babsie.component.html
@@ -34,7 +34,8 @@
     <div class="capable col-6">
       <h1 style="text-align: center">THERAPY SESSIONS</h1>
       <ul>
-        <li>KINESIOLOGY</li>
+        <li>GENERAL KINESIOLOGY</li>
+        <li>SPECIFIC KINESIOLOGY</li>
         <li>KAHUNA MASSAGE</li>
         <li>LYMPHATIC DRAINAGE</li>
         <li>ALLERGY NUTRITION</li>
