--- a/src/app/main/kinisiologists/melina/melina.component.html
+++ b/src/app/main/kinisiologists/melina/melina.component.html
@@ -40,6 +40,12 @@
     </div>
     <div class="prices col-6">
       <h1 style="text-align: center">THERAPY SESSIONS</h1>
+      <ul>
+        <li>GENERAL KINESIOLOGY</li>
+        <li>SPECIFIC KINESIOLOGY</li>
+        <li>ADRENAL FATIGUE</li>    
+        <li>REGIONAL MUSCLE</li>        
+      </ul>
     </div>
   </div>
 </div>
