--- a/src/app/main/kinisiologists/kinisiologists.component.html
+++ b/src/app/main/kinisiologists/kinisiologists.component.html
@@ -2,7 +2,7 @@
   <h1>THERAPISTS</h1>
   <div class="row justify-content-center">
     <div class="card col-4">
-      <button type="button" class="btn" [routerLink]="['/babsiePage']">
+      <button type="button" class="btn" [routerLink]="['/babsie']">
         <img src="./../../assets/babsie.jpg">
         <h2><b>Babsie Nothnagel</b></h2>
         <p>Benoni AH</p>        
@@ -11,7 +11,7 @@
     <div class="info col-2">
       <!-- //>information about us</p> -->
     </div>
-    <div class="card col-4" id="milena" [routerLink]="['/melinaPage']">
+    <div class="card col-4" id="milena" [routerLink]="['/melina']">
       <button type="button" class="btn">
         <img src="./../../assets/milena2.jpg">
         <h2><b>Melina Geertsema</b></h2>
