--- a/src/app/main/home/benefits/benefits.component.html
+++ b/src/app/main/home/benefits/benefits.component.html
@@ -1,23 +1,31 @@
-<div class="container benefits">
-    <h1>BENEFITS!</h1>
-    <div class="row justify-content-center">
-      <ul class="col-4">
-        <li>Enhance learning</li>
-        <li>Assist in personal perfomance</li>
-        <li>Brain Integration</li>
-        <li>Eliminate stress</li>
-      </ul>
-      <ul class="col-4">
-        <li>Help overcome past trauma</li>
-        <li>identify nutritional deficiency</li>
-        <li>help overcome fears and phobias</li>
-        <li>Aid in injury healing</li>
-      </ul>
-      <ul class="col-4">
-        <li>Brain integration</li>
-        <li>Boost Sport perfomance</li>
-        <li>Help with finance decision making</li>
-        <li>Pin-point and eliminate allergic reactions</li>
-      </ul>
-    </div>
+<div class="container navigation">
+  <div class="row justify-content-center">
+    <button class="btn col-2" [routerLink]="['/home']">KINESIOLOGISTS</button>
+    <button class="btn col-2" [routerLink]="['/definition']">DEFINITION</button>
+    <button class="btn col-2" [routerLink]="['/benefits']">BENEFITS</button>
+    <button class="btn col-2" [routerLink]="['/therapies']">THERAPIES</button>
   </div>
+</div>
+<div class="container benefits">
+  <h1>BENEFITS!</h1>
+  <div class="row justify-content-center">
+    <ul class="col-4">
+      <li>Enhance learning</li>
+      <li>Assist in personal perfomance</li>
+      <li>Brain Integration</li>
+      <li>Eliminate stress</li>
+    </ul>
+    <ul class="col-4">
+      <li>Help overcome past trauma</li>
+      <li>identify nutritional deficiency</li>
+      <li>help overcome fears and phobias</li>
+      <li>Aid in injury healing</li>
+    </ul>
+    <ul class="col-4">
+      <li>Brain integration</li>
+      <li>Boost Sport perfomance</li>
+      <li>Help with finance decision making</li>
+      <li>Pin-point and eliminate allergic reactions</li>
+    </ul>
+  </div>
+</div>
