--- a/src/app/main/home/definition/definition.component.html
+++ b/src/app/main/home/definition/definition.component.html
@@ -1,3 +1,11 @@
+<div class="container navigation">
+  <div class="row justify-content-center">
+    <button class="btn col-2" [routerLink]="['/home']">KINESIOLOGISTS</button>
+    <button class="btn col-2" [routerLink]="['/definition']">DEFINITION</button>
+    <button class="btn col-2" [routerLink]="['/benefits']">BENEFITS</button>
+    <button class="btn col-2" [routerLink]="['/therapies']">THERAPIES</button>
+  </div>
+</div>
 <div class="container">
   <div class="row justify-content-center">
     <h1 class="whatIs col-9">KINESIOLOGY?</h1>
