--- a/src/app/main/home/definition/definition.component.scss
+++ b/src/app/main/home/definition/definition.component.scss
@@ -1,3 +1,14 @@
+.navigation{  
+    margin-bottom: 1%;   
+    background-color: rgba(55, 130, 175, 0.6);
+    max-width: 100%;        
+    .btn{
+      margin: 1%;
+      border-radius: 25px;
+      background-color: rgba(0, 8, 62, 0.5);
+      color: #00cbff;
+    }
+  }
 .whatIs{
     background-color: rgba(55, 130, 175, 0.6);
     margin-left: 1%;
@@ -6,7 +17,4 @@
     border-radius: 30px;
     text-align: center;
     color: #00e1ff;
-}
-.container{
-    max-width: 90%;
 }
