--- a/src/app/main/home/home.component.html
+++ b/src/app/main/home/home.component.html
@@ -1,14 +1,15 @@
 <div class="container navigation">
   <div class="row justify-content-center">
-    <button class="btn col-2" [routerLink]="['/home', {outlets: {'info': ['define']}}]">DEFINITION</button>
-    <button class="btn col-2" [routerLink]="['/home', {outlets: {'info': ['benefits']}}]">BENEFITS</button>
-    <button class="btn col-2" [routerLink]="['/home', {outlets: {'info': ['types']}}]">THERAPIES</button>
+    <button class="btn col-2" [routerLink]="['/home']">KINESIOLOGISTS</button>
+    <button class="btn col-2" [routerLink]="['/definition']">DEFINITION</button>
+    <button class="btn col-2" [routerLink]="['/benefits']">BENEFITS</button>
+    <button class="btn col-2" [routerLink]="['/therapies']">THERAPIES</button>
   </div>
 </div>
 <!-- <div [@routerTransition]="getState(o)"> -->
-<div>
+<!-- <div>
   <router-outlet #o="outlet" name="info"></router-outlet>
-</div>
+</div> -->
 <div class="kinesiologists">
   <app-kinisiologists></app-kinisiologists>
 </div>
