changed few detatils

--- a/src/app/main/home/benefits/benefits.component.html
+++ b/src/app/main/home/benefits/benefits.component.html
@@ -14,18 +14,22 @@
       <li>Assist in personal perfomance</li>
       <li>Brain Integration</li>
       <li>Eliminate stress</li>
+      <li>Reduce and Eliminate Emotional Physical and Mental Stress (change current wording)</li>
     </ul>
     <ul class="col-4">
       <li>Help overcome past trauma</li>
       <li>identify nutritional deficiency</li>
       <li>help overcome fears and phobias</li>
       <li>Aid in injury healing</li>
+      <li>Emotional and trauma stress release</li>
     </ul>
     <ul class="col-4">
       <li>Brain integration</li>
       <li>Boost Sport perfomance</li>
       <li>Help with finance decision making</li>
       <li>Pin-point and eliminate allergic reactions</li>
+      <li>Identify nutritional deficiency and excess</li>
+      <li>Aid in healing of muscle injuries</li>
     </ul>
   </div>
 </div>
