--- a/src/app/main/home/types/types.component.html
+++ b/src/app/main/home/types/types.component.html
@@ -41,13 +41,16 @@
     <div class="types col-3">
       <button class="btn" #regionalMuscleModal [routerLink]="['/therapies/kinesiology']">Regional Muscle</button>
     </div>
+    <div class="types col-3">
+      <button class="btn" #regionalMuscleModal [routerLink]="['/therapies/kinesiology']">Pain Protocol</button>
+    </div>
     <router-outlet></router-outlet>
     <div class="types col-10">
       <h3>
         All processes are performed with muscle test response, yielding accurate results specifically for your individual needs and
         requirements.
       </h3>
-    </div>    
+    </div>
   </div>
 </div>
 
