--- a/src/app/main/kinisiologists/melina/melina.component.html
+++ b/src/app/main/kinisiologists/melina/melina.component.html
@@ -30,11 +30,15 @@
         <h5>072 983 7949</h5>
       </h4>
       <h4>Location:
-        <a href="https://www.google.co.za/maps/place/616A+Magnetiet+St,+Elarduspark,+Pretoria,+0047/data=!4m2!3m1!1s0x1e95671aa71a591b:0x4c1440f1a77b0e5c?sa=X&ved=0ahUKEwjootKT0c3YAhXiDsAKHblbAHkQ8gEIKDAA" target="_blank">
-        <h5>616A Magnetiet Street Elardus Park Pretoria</h5><h6>Mondays</h6>
+        <a href="https://www.google.co.za/maps/place/264+9th+Rd,+Bredell+AH,+Kempton+Park,+1619/data=!4m2!3m1!1s0x1e953fcdd59b9197:0x2992ca66451ef744?sa=X&ved=0ahUKEwjn2LzS0M3YAhXjAsAKHYigDasQ8gEIKDAA"
+          target="_blank">
+          <h5>264 9th Road Breddel AH</h5>
+          <h6>Tuesdays & Thursdays</h6>
         </a>
-        <a href="https://www.google.co.za/maps/place/264+9th+Rd,+Bredell+AH,+Kempton+Park,+1619/data=!4m2!3m1!1s0x1e953fcdd59b9197:0x2992ca66451ef744?sa=X&ved=0ahUKEwjn2LzS0M3YAhXjAsAKHYigDasQ8gEIKDAA" target="_blank">
-          <h5>264 9th Road Breddel AH</h5><h6>Wednesdays</h6>
+        <a href="https://www.google.co.za/maps/place/616A+Magnetiet+St,+Elarduspark,+Pretoria,+0047/data=!4m2!3m1!1s0x1e95671aa71a591b:0x4c1440f1a77b0e5c?sa=X&ved=0ahUKEwjootKT0c3YAhXiDsAKHblbAHkQ8gEIKDAA"
+          target="_blank">
+          <h5>616A Magnetiet Street Elardus Park Pretoria</h5>
+          <h6>Tuesdays - Fridays</h6>
         </a>
       </h4>
     </div>
@@ -43,8 +47,8 @@
       <ul>
         <li>GENERAL KINESIOLOGY</li>
         <li>SPECIFIC KINESIOLOGY</li>
-        <li>ADRENAL FATIGUE</li>    
-        <li>REGIONAL MUSCLE</li>        
+        <li>ADRENAL FATIGUE</li>
+        <li>REGIONAL MUSCLE</li>
       </ul>
     </div>
   </div>
